--- a/Develop/notes.html
+++ b/Develop/notes.html
@@ -15,7 +15,8 @@
       integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <!-- changed file path to connect styles.css adde (./public to given code) -->
+    <link rel="stylesheet" href="./public/assets/css/styles.css" />
   </head>
 
   <body>
@@ -44,6 +45,7 @@
         </div>
       </div>
     </div>
-    <script src="/assets/js/index.js"></script>
+    <!-- changed file path to connect index.js -->
+    <script src="./public/assets/js/index.js"></script>
   </body>
 </html>
