updated file paths

--- a/Develop/public/notes.html
+++ b/Develop/public/notes.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
     <!-- changed file path to connect styles.css adde (./public to given code) -->
-    <link rel="stylesheet" href="./public/assets/css/styles.css" />
+    <link rel="stylesheet" href="/assets/css/styles.css" />
   </head>
 
   <body>
@@ -46,6 +46,6 @@
       </div>
     </div>
     <!-- changed file path to connect index.js -->
-    <script src="./public/assets/js/index.js"></script>
+    <script src="/assets/js/index.js"></script>
   </body>
 </html>
